--- a/master.tex
+++ b/master.tex
@@ -20,6 +20,10 @@
 
 \AtBeginDocument{\providecommand\defref[1]{\ref{def:#1}}}
 \AtBeginDocument{\providecommand\lemref[1]{\ref{lem:#1}}}
+\floatstyle{ruled}
+\newfloat{algorithm}{tbp}{loa}[chapter]
+\providecommand{\algorithmname}{Algorithmus}
+\floatname{algorithm}{\protect\algorithmname}
 \RS@ifundefined{subref}
   {\def\RSsubtxt{section~}\newref{sub}{name = \RSsubtxt}}
   {}
@@ -1255,7 +1259,7 @@ $W\subseteq G\times G$.
 \item eine Gate-Markierung $\Sigma$ 
 \begin{eqnarray*}
 \Sigma:G & \rightarrow & \mathbb{B}\\
- & \cup & \left\{ \mathbf{0},\mathbf{1},\neg\right\} \\
+ & \cup & \left\{ \mathbf{0},\mathbf{1},\mathtt{NOT}\right\} \\
  & \cup & \left\{ R\bar{t}\mid R\in\sigma,\bar{t}\in U^{\mathrm{ar}\left(R\right)}\right\} 
 \end{eqnarray*}
 
@@ -1269,8 +1273,8 @@ abgekürzt) und
 Hierbei haben alle mit $\phi\in\mathbb{B}$ markierten Gates mindestens
 einen\footnote{Alle hier betrachteten Schaltkreise haben einen unbeschränkten Fan-In.}
 Vorgänger, alle mit $R\bar{x}$, $\mathbf{0}$ oder $\mathbf{1}$
-markierten Gates keinen\textbf{ }Vorgänger, und alle mit $\neg$ markierten
-Gates genau\textbf{ }einen\textbf{ }Vorgänger.
+markierten Gates keinen\textbf{ }Vorgänger, und alle mit $\mathtt{NOT}$
+markierten Gates genau\textbf{ }einen\textbf{ }Vorgänger.
 
 Die mit $\mathbf{0}$ oder $\mathbf{1}$ markierten Gates heißen \textbf{Konstanten},
 die mit $R\bar{x}$ markierten Gates heißen \textbf{Inputs}, und die
@@ -1300,7 +1304,8 @@ gilt
 \end{cases}
 \]
 
-\item Für $\Sigma\left(g\right)=\neg$ und $\left(h,g\right)\in W$ gilt
+\item Für $\Sigma\left(g\right)=\mathtt{NOT}$ und $\left(h,g\right)\in W$
+gilt 
 \[
 \mathcal{C}\left[\mathfrak{A}\right]\left(g\right)\coloneqq1-\mathcal{C}\left[\mathfrak{A}\right]\left(h\right)
 \]
@@ -1893,11 +1898,11 @@ eingefügt. Die Gates werden mit den Outputs von $\mathcal{C}_{n}^{\varphi'}$
 verknüpft. 
 \begin{eqnarray*}
 G & \coloneqq & G'\uplus\left\{ g_{\bar{t}}\mid\bar{t}\in U^{k}\right\} \\
-W & \coloneqq & W'\cup W_{\neg}\\
-W_{\neg} & \coloneqq & \left\{ \left(\Omega'\left(\bar{t}\right),g_{\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} \\
+W & \coloneqq & W'\cup W_{\mathtt{NOT}}\\
+W_{\mathtt{NOT}} & \coloneqq & \left\{ \left(\Omega'\left(\bar{t}\right),g_{\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} \\
 \Sigma\left(g\right) & \coloneqq & \begin{cases}
 \Sigma'\left(g\right) & \mathrm{falls}\,\,g\in G'\\
-\neg & \mathrm{sonst}
+\mathtt{NOT} & \mathrm{sonst}
 \end{cases}\\
 \Omega\left(\bar{t}\right) & \coloneqq & g_{\bar{t}}
 \end{eqnarray*}
@@ -1919,9 +1924,9 @@ g_{\pi\bar{t}} & \mathrm{falls}\,\,g=g_{\bar{t}}
 \]
 Dann gilt:
 \begin{eqnarray*}
-\hat{\pi}W_{\neg} & = & \left\{ \left(\hat{\pi}\Omega'\left(\bar{t}\right),\hat{\pi}g_{\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} \\
- & = & \left\{ \left(\Omega'\left(\pi\bar{t}\right),g_{\pi\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} =W_{\neg}\\
-\Sigma\left(\hat{\pi}g_{\bar{t}}\right) & = & \Sigma\left(g_{\bar{t}}\right)=\neg
+\hat{\pi}W_{\mathtt{NOT}} & = & \left\{ \left(\hat{\pi}\Omega'\left(\bar{t}\right),\hat{\pi}g_{\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} \\
+ & = & \left\{ \left(\Omega'\left(\pi\bar{t}\right),g_{\pi\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} =W_{\mathtt{NOT}}\\
+\Sigma\left(\hat{\pi}g_{\bar{t}}\right) & = & \Sigma\left(g_{\bar{t}}\right)=\mathtt{NOT}
 \end{eqnarray*}
 
 \item [{Größe:}] Der Schaltkreis hat die Tiefe $T\left(\mathcal{C}_{n}^{\varphi}\right)$
@@ -2030,8 +2035,9 @@ T\left(\mathcal{C}_{n}^{\varphi}\right) & = & 1+T\left(\mathcal{C}_{n}^{\psi}\ri
 so sei der Schaltkreis analog zu Fall 8 mit $\Sigma\left(g_{\bar{t}}\right)\coloneqq\mathtt{AND}$.\end{casenv}
 \begin{description}
 \item [{Speicherplatz}] Die beschriebene Konstruktion wird von einem $\left\Vert \varphi\right\Vert \left|\mathrm{var}\left(\varphi\right)\right|\log n$-platzbeschränkten
-Algorithmus berechnet. Sei $\varphi$ in einer geeigneten Form kodiert:
-
+Algorithmus berechnet.
+\end{description}
+\begin{algorithm}[H]
 \begin{lyxcode}
 Berechne($\varphi\left(\bar{x}\right)$):
 \begin{lyxcode}
@@ -2058,7 +2064,12 @@ Verknüpfe~$\Omega_{\psi}\left(\bar{t}'\right)$~mit~$g_{\varphi\left(\bar{t}\rig
 \end{lyxcode}
 \end{lyxcode}
 \end{lyxcode}
-\end{description}
+\caption{Berechnung von $\mathcal{C}_{n}^{\varphi}$ für $\mathrm{FO}\left[\sigma\right]$-Formeln.}
+
+
+\end{algorithm}
+
+
 Jeder Aufruf von $\mathtt{Berechne}\left(\varphi\left(\bar{x}\right)\right)$
 iteriert über Variablen $\bar{t}\in U^{\mathrm{var}\left(\varphi\right)}$,
 die $\mathrm{var}\left(\varphi\right)\log n$ Bits belegen. Da die
@@ -4115,8 +4126,8 @@ genau dann wenn mindestens die Hälfte der Vorgänger erfüllt sind:
 \sum_{h\in H}\mathcal{W}\left(h,g\right)\frac{\left|\Pi_{\rho\bar{a}}\left(h\right)\cap\mathrm{EV}\left(h\right)\right|}{\left|\Pi_{\rho_{\bar{a}}}\left(h\right)\right|}\geqslant\frac{1}{2}\sum_{h\in H}\mathcal{W}\left(h,g\right)
 \]
 
-\item Falls $\Sigma\left(g\right)=\neg$, dann hat $g$ per Definition des
-Schaltkreises genau einen Vorgänger $h$, es gilt $\mathrm{sp}\left(g\right)=\mathrm{sp}\left(h\right)$
+\item Falls $\Sigma\left(g\right)=\mathtt{NOT}$, dann hat $g$ per Definition
+des Schaltkreises genau einen Vorgänger $h$, es gilt $\mathrm{sp}\left(g\right)=\mathrm{sp}\left(h\right)$
 und $\mathcal{C}\left[\pi^{-1}\mathfrak{A}\right]\left(g\right)=1-\mathcal{C}\left[\pi^{-1}\mathfrak{A}\right]\left(h\right)$.
 Also:
 \[
@@ -4154,7 +4165,7 @@ und Lemma \ref{lem:algo-rigide} eine Sammlung von $\mathrm{LFP}\left[\leqslant\r
 $\Phi$, die auf der Struktur $\Upsilon\left(n\right)\in\mathbf{FIN}_{<}\left(\sigma\right)$
 ausgewertet den Schaltkreis $\mathcal{C}_{n}$ beschreiben:
 \[
-\Phi\coloneqq\left(\varphi_{G},\varphi_{\mathcal{W}},\varphi_{\Omega},\left(\varphi_{\phi}\right)_{\phi\in\mathbb{B}\uplus\left\{ \mathbf{0},\mathbf{1},\neg\right\} },\left(\varphi_{R}\right)_{R\in\sigma}\right)
+\Phi\coloneqq\left(\varphi_{G},\varphi_{\mathcal{W}},\varphi_{\Omega},\left(\varphi_{\phi}\right)_{\phi\in\mathbb{B}\uplus\left\{ \mathbf{0},\mathbf{1},\mathtt{NOT}\right\} },\left(\varphi_{R}\right)_{R\in\sigma}\right)
 \]
 
 
@@ -4168,7 +4179,7 @@ Kodierung von Zahlen, so dass für $\bar{g},\bar{h},\bar{w}\in\left[0,n\right]^{
 \Upsilon\left(n\right)\models\varphi_{\Omega}\left[\bar{t}\bar{g}\right] & \Leftrightarrow & \Omega\left(\bar{t}\right)=f_{G}^{-1}\left(\bar{g}\right)\\
  &  & \mathrm{f\ddot{u}r}\,\bar{t}\in\left[1,n\right]^{k}\\
 \Upsilon\left(n\right)\models\varphi_{\phi}\left[\bar{g}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\left(\bar{g}\right)\right)=\phi\\
- &  & \mathrm{f\ddot{u}r}\,\phi\in\mathbb{B}\uplus\left\{ \mathbf{0},\mathbf{1},\neg\right\} \\
+ &  & \mathrm{f\ddot{u}r}\,\phi\in\mathbb{B}\uplus\left\{ \mathbf{0},\mathbf{1},\mathtt{NOT}\right\} \\
 \Upsilon\left(n\right)\models\varphi_{R}\left[\bar{g}\bar{x}\right] & \Leftrightarrow & \Sigma\left(f_{G}^{-1}\left(\bar{g}\right)\right)=R\bar{x}\\
  &  & \mathrm{f\ddot{u}r}\,R/m\in\sigma,\,\bar{x}\in\left[1,n\right]^{m}
 \end{eqnarray*}
